src/test/funciones/error_return_fuera.cps
// ❌ 'return' fuera del cuerpo de una función.
return; // error: 'return' solo permitido dentro de una función
